# Wolf3d

./: CMakeLists.txt  Makefile  README.md  color.c  draw.c  error_messages.c  event_handler.c  get_next_line.h  init.c  list_born2die.c  main.c  parse_map.c  raycasting.c  validation.c  wolf3d.h
inc/: wolf3d.h
lib/frameworks/SDL2_mixer.framework/Versions/A/Frameworks/mpg123.framework/Versions/A/Resources/: LICENSE.mpg123.txt
lib/frameworks/SDL2_mixer.framework/Versions/A/Headers/: SDL_mixer.h
lib/frameworks/SDL2_ttf.framework/Versions/A/Frameworks/FreeType.framework/Versions/A/Resources/: LICENSE.freetype.txt
lib/libft/: Makefile  author  ft_atoi.c  ft_atoll.c  ft_bzero.c  ft_count_int.c  ft_count_words.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_new_string.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_skip_whitespaces.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  (+27 more)
maps/: map.wolf
src/: color.c  draw.c  error_handler.c  event_handler.c  get_next_line.c  init.c  main.c  parse_map.c  raycasting.c  validation.c
